--- a/.github/workflows/pysourceCI.yml
+++ b/.github/workflows/pysourceCI.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Check python installation
-        run: bash src.sh -v 3.12.0 -d /usr/src
+        run: bash src.sh -v 3.12.0 -d ./
